Surface view implemented

--- a/app/src/main/res/layout/activity_arcore.xml
+++ b/app/src/main/res/layout/activity_arcore.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="teamkunle.co.uk.arcoreplayground.app.ui.arcore.ARCoreActivity">
+    android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+    <teamkunle.co.uk.arcoreplayground.surfaceview.CustomSurfaceView
+        android:id="@+id/custom_surface_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</RelativeLayout>
