reverted back to original code

--- a/app/src/main/res/layout/activity_arcore.xml
+++ b/app/src/main/res/layout/activity_arcore.xml
@@ -5,6 +5,7 @@
 
     <teamkunle.co.uk.arcoreplayground.surfaceview.CustomSurfaceView
         android:id="@+id/custom_surface_view"
+        android:background="@android:color/transparent"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
